# fall19-se_01-assessment

./: Makefile  README.md  pyproject.toml
ex1/: board.py  game.py  main.py
sliding_game/: auto_player.py  board.py  game.py
