[tool.poetry]
name = "fall19-se_01-assessment"
version = "0.1.0"
description = ""
authors = ["Urhengulas <johann.hemmann@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]
pylint = "^2.4.4"
pep8 = "^1.7.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
